--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -21,26 +21,29 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav me-auto mb-2 mb-sm-0">
         {% if request.user.is_authenticated  %}
+          <!-- Student Dashboard -->
           {% if request.user.is_student %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>            
+                <a class="nav-link" href="{% url 'info:student_view' %}">Home</a>            
             </li>
             <li>
               <a class="nav-link" href="#">Profile</a>
             </li>
+          <!-- Teacher Dashboard -->
           {% elif request.user.is_teacher %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>            
+                <a class="nav-link" href="{% url 'info:teacher_view' %}">Home</a>            
             </li>
             <li>
               <a class="nav-link" href="#">Profile</a>
             </li>
+          <!-- Admin Dashboard -->
           {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>            
+                <a class="nav-link" href="{% url 'info:admin_view' %}">Home</a>            
             </li>
             <li>
-              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link" href="/admin" target="_blank">Django Administration</a>
             </li>
           {% endif %}
         {% endif %}
@@ -49,9 +52,9 @@
       <ul class="navbar-nav mb-2 mb-sm-0">
         <li class="nav-item dropdown">
           {% if request.user.is_authenticated %}
-            <a class="btn btn-danger m-1" href="#">Logout</a>
+            <a class="btn btn-danger m-1" href="{% url 'account_logout' %}">Logout</a>
           {% else %}
-            <a class="btn btn-outline-light m-1" href="#">Login</a>
+            <a class="btn btn-outline-light m-1" href="{% url 'account_login' %}">Login</a>
           {% endif %}
         </li>
       </ul>
