Admin Registration Form

--- a/info/templates/info/admin/index.html
+++ b/info/templates/info/admin/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-6 col-md-4 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Add Admin</h2>
-                    <a href="#">
+                    <a href="{% url 'info:create_admin_user' %}">
                         <img src="{% static 'info/img/admin.png' %}" alt="admin" class="img-fluid img-thumbnail">
                     </a>
                 </div>
