--- a/templates/base_master.html
+++ b/templates/base_master.html
@@ -13,6 +13,11 @@
         
         <!-- Bootstrap CSS -->
         {% bootstrap_css %}
+
+        <!-- Custom CSS -->
+        {% block custom_css %}
+            
+        {% endblock custom_css %}
     </head>
     <body>
         <!-- Header -->
