--- a/info/templates/info/student/index.html
+++ b/info/templates/info/student/index.html
@@ -4,13 +4,13 @@
 <div class="container">
     <div class="row d-sm-block d-md-none">
         <div class="text-center">
-            <h1 class="mb-4">Welcome {{request.user}}</h1>
+            <h1 class="mb-4">Welcome {{request.user.student.name}}</h1>
         </div>
     </div>
     <div class="row">
         <div class="col d-none d-md-block">
             <div class="text-center">
-                <h1 class="mt-3">Welcome {{request.user}}</h1>
+                <h1 class="mt-3">Welcome {{request.user.student.name}}</h1>
                 <img src="{% static 'info/img/univ-logo.png' %}" alt="univ-logo" class="img-fluid">
                 <p class="lead">University Enterprise Resource Planning System</p>
             </div>
@@ -19,19 +19,19 @@
             <div class="row">
                 <div class="col-6 col-md-4 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Attendance</h2>
-                    <a href="#">
-                        <img src="{% static 'info/img/attendance.jpg' %}" alt="teacher" class="img-fluid img-thumbnail">
+                    <a href="{% url 'info:student_attendance' request.user.student.roll_number %}">
+                        <img src="{% static 'info/img/attendance.png' %}" alt="teacher" class="img-fluid img-thumbnail">
                     </a>
                 </div>
                 <div class="col-6 col-md-4 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Marks</h2>
-                    <a href="#">
-                        <img src="{% static 'info/img/marks.jpg' %}" alt="student" class="img-fluid img-thumbnail">
+                    <a href="{% url 'info:student_marks' request.user.student.roll_number %}">
+                        <img src="{% static 'info/img/marks.png' %}" alt="student" class="img-fluid img-thumbnail">
                     </a>
                 </div>
                 <div class="col-6 col-md-4 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Timetable</h2>
-                    <a href="#">
+                    <a href="{% url 'info:student_timetable' request.user.student.class_id_id %}">
                         <img src="{% static 'info/img/timetable.png' %}" alt="admin" class="img-fluid img-thumbnail">
                     </a>
                 </div>
