--- a/info/templates/info/teacher/index.html
+++ b/info/templates/info/teacher/index.html
@@ -4,13 +4,13 @@
 <div class="container">
     <div class="row d-sm-block d-md-none">
         <div class="text-center">
-            <h1 class="mb-4">Welcome {{request.user}}</h1>
+            <h1 class="mb-4">Welcome {{request.user.teacher.name}}</h1>
         </div>
     </div>
     <div class="row">
         <div class="col d-none d-md-block">
             <div class="text-center">
-                <h1 class="mt-3">Welcome {{request.user}}</h1>
+                <h1 class="mt-3">Welcome {{request.user.teacher.name}}</h1>
                 <img src="{% static 'info/img/univ-logo.png' %}" alt="univ-logo" class="img-fluid">
                 <p class="lead">University Enterprise Resource Planning System</p>
             </div>
@@ -19,26 +19,26 @@
             <div class="row">
                 <div class="col-6 col-md-3 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Attendance</h2>
-                    <a href="#">
-                        <img src="{% static 'info/img/attendance.jpg' %}" alt="teacher" class="img-fluid img-thumbnail">
+                    <a href="{% url 'info:teacher_class_view' %}">
+                        <img src="{% static 'info/img/attendance.png' %}" alt="attendance" class="img-fluid img-thumbnail">
                     </a>
                 </div>
                 <div class="col-6 col-md-3 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Marks</h2>
-                    <a href="#">
-                        <img src="{% static 'info/img/marks.jpg' %}" alt="student" class="img-fluid img-thumbnail">
+                    <a href="{% url 'info:teacher_view_marks' %}">
+                        <img src="{% static 'info/img/marks.png' %}" alt="marks" class="img-fluid img-thumbnail">
                     </a>
                 </div>
                 <div class="col-6 col-md-3 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Timetable</h2>
-                    <a href="#">
-                        <img src="{% static 'info/img/timetable.png' %}" alt="admin" class="img-fluid img-thumbnail">
+                    <a href="{% url 'info:teacher_timetable' request.user.teacher.teacher_id %}">
+                        <img src="{% static 'info/img/timetable.png' %}" alt="timetable" class="img-fluid img-thumbnail">
                     </a>
                 </div>
                 <div class="col-6 col-md-3 col-lg-4 text-center m-sm-0 m-lg-3">
                     <h2 class="text-secondary">Reports</h2>
-                    <a href="#">
-                        <img src="{% static 'info/img/reports.png' %}" alt="admin" class="img-fluid img-thumbnail">
+                    <a href="{% url 'info:teacher_report_classes' %}">
+                        <img src="{% static 'info/img/reports.png' %}" alt="reports" class="img-fluid img-thumbnail">
                     </a>
                 </div>
             </div>
