--- a/info/templates/info/teacher/class_dates.html
+++ b/info/templates/info/teacher/class_dates.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td colspan="3">
                         <div class="alert alert-info mt-3" role="alert">
-                            Student has no Courses.
+                            Class not assigned.
                         </div>
                     </td>
                 </tr>
