--- a/info/templates/info/teacher/student_marks.html
+++ b/info/templates/info/teacher/student_marks.html
@@ -28,10 +28,12 @@
                         {% endfor %}
                     </tr>
                     {% empty %}
-                        <tr colspan="8">
-                            <div class="alert alert-info mt-3" role="alert">
-                                Students has no Courses.
-                            </div>
+                        <tr class="align-middle">
+                            <td colspan="8">
+                                <div class="alert alert-info mt-3" role="alert">
+                                    Students has no Courses.
+                                </div>
+                            </td>
                         </tr>
                     {% endfor %}   
                 </tbody>
