--- a/info/templates/info/teacher/attendance.html
+++ b/info/templates/info/teacher/attendance.html
@@ -21,11 +21,11 @@
                                 <td class="align-middle">{{student.name}}</td>
                                 <td class="align-middle">
                                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                                        <input type="radio" class="btn-check" name="{{student.roll_number}}" id="option1" value="present" autocomplete="off" checked>
-                                        <label class="btn btn-outline-success" for="option1">Present</label>
+                                        <input type="radio" class="btn-check" name="{{student.roll_number}}" id="{{student.roll_number}}-1" value="present" autocomplete="off" checked>
+                                        <label class="btn btn-outline-success" for="{{student.roll_number}}-1">Present</label>
                                       
-                                        <input type="radio" class="btn-check" name="{{student.roll_number}}" id="option2" value="absent" autocomplete="off">
-                                        <label class="btn btn-outline-danger" for="option2">Absent</label>
+                                        <input type="radio" class="btn-check" name="{{student.roll_number}}" id="{{student.roll_number}}-2" value="absent" autocomplete="off">
+                                        <label class="btn btn-outline-danger" for="{{student.roll_number}}-2">Absent</label>
                                     </div>
                                 </td>
                             </tr>
