--- a/info/templates/info/teacher/edit_attendance.html
+++ b/info/templates/info/teacher/edit_attendance.html
@@ -20,19 +20,19 @@
                             <td class="align-middle">
                                 {% if attendance.status %}
                                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="option1" value="present" autocomplete="off" checked>
-                                    <label class="btn btn-outline-success" for="option1">Present</label>
+                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="{{attendance.student.roll_number}}-1" value="present" autocomplete="off" checked>
+                                    <label class="btn btn-outline-success" for="{{attendance.student.roll_number}}-1">Present</label>
                                     
-                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="option2" value="absent" autocomplete="off">
-                                    <label class="btn btn-outline-danger" for="option2">Absent</label>
+                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="{{attendance.student.roll_number}}-2" value="absent" autocomplete="off">
+                                    <label class="btn btn-outline-danger" for="{{attendance.student.roll_number}}-2">Absent</label>
                                 </div>
                                 {% else %}
                                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="option1" value="present" autocomplete="off" >
-                                    <label class="btn btn-outline-success" for="option1">Present</label>
+                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="{{attendance.student.roll_number}}-1" value="present" autocomplete="off" >
+                                    <label class="btn btn-outline-success" for="{{attendance.student.roll_number}}-1">Present</label>
                                     
-                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="option2" value="absent" autocomplete="off" checked>
-                                    <label class="btn btn-outline-danger" for="option2">Absent</label>
+                                    <input type="radio" class="btn-check" name="{{attendance.student.roll_number}}" id="{{attendance.student.roll_number}}-2" value="absent" autocomplete="off" checked>
+                                    <label class="btn btn-outline-danger" for="{{attendance.student.roll_number}}-2">Absent</label>
                                 </div>
                                 {% endif %}
                             </td>
