--- a/info/templates/info/student/timetable.html
+++ b/info/templates/info/student/timetable.html
@@ -32,12 +32,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for i in class_matrix %}
+                    {% for day in timetable %}
                     <tr>
-                        {% for j in i %}
+                        {% for period in day %}
                             {% if forloop.counter == 1 %}
                                 <th class="table-primary border border-light align-middle" scope="row">
-                                    {{j}}
+                                    {{period}}
                                 </th>
                             {% elif forloop.counter == 5 %}
                                 <td class="table-info text-center border border-light align-middle">
@@ -47,11 +47,11 @@
                                 <td class="table-info text-center border border-light align-middle">
                                     <b>Lunch</b>
                                 </td>
-                            {% elif j == True %}
+                            {% elif period == True %}
                                 <td class="align-middle"></td>
                             {% else %}
                                 <td class="text-center">
-                                    {{j}}
+                                    {{period}}
                                 </td>
                             {% endif %}
                         {% endfor %}
