--- a/info/templates/info/admin/manage_data.html
+++ b/info/templates/info/admin/manage_data.html
@@ -164,6 +164,50 @@
                 </div>
             </div>
         </div>
+        <!-- HOD -->
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed fs-3 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#hods" aria-expanded="false" aria-controls="hods">
+                    Assign HODs
+                </button>
+            </h2>
+            <div id="hods" class="accordion-collapse collapse" data-bs-parent="#accordionManageData">
+                <div class="accordion-body">
+                    <a class="btn btn-primary" href="{% url 'info:assign_hod' %}">Add HOD</a>
+                    {% if hod_list %}
+                        <div class="table-responsive mt-3">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Department</th>
+                                        <th scope="col">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for hod in hod_list  %}
+                                    <tr>
+                                        <td class="align-middle">{{hod.name.name}}</td>
+                                        <td class="align-middle">{{hod.department}}</td>
+                                        <td class="align-middle">
+                                            <button type="button" class="btn btn-sm btn-danger m-1"
+                                                onclick="window.location = '{% url 'info:unassign_hod' hod.id %}'">
+                                            Delete
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}   
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="alert alert-info mt-3" role="alert">
+                            There are no HODs in the database.
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
         <!-- Teachers -->
         <div class="accordion-item">
             <h2 class="accordion-header">
@@ -244,7 +288,7 @@
                                 <tbody>
                                     {% for assign in assign_list  %}
                                     <tr>
-                                        <td class="align-middle">{{assign.teacher}}</td>
+                                        <td class="align-middle">{{assign.teacher.name}}</td>
                                         <td class="align-middle">
                                             <a href="{{assign.get_absolute_url}}" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">
                                                 {{assign.class_id}}
