Fixes and Documentation
HOD change attendance, small fixes and update documentation.

--- a/info/templates/info/teacher/class_list.html
+++ b/info/templates/info/teacher/class_list.html
@@ -44,7 +44,7 @@
                         {% elif choice == 3 %}
                             <button type="button" class="btn btn-sm btn-primary m-1"
                                 onclick="window.location = '{% url 'info:teacher_report_view' assign.id %}'">
-                            Generate Reports
+                            Generate Report
                             </button>
                         {% endif %}
                     </td>
