--- a/info/templates/info/hod/student_attendance_detail.html
+++ b/info/templates/info/hod/student_attendance_detail.html
@@ -18,7 +18,7 @@
                     {% for obj in attendance_list %}
                     <tr>
                         <td class="align-middle">{{forloop.counter}}</td>
-                        <td class="align-middle">{{obj.date}} {{obj.id}}</td>
+                        <td class="align-middle">{{obj.date}}</td>
                         <td class="align-middle">{{obj.date|date:"l"}}</td>
                         {% if obj.status %}
                             <td class="align-middle text-success">Present</td>
@@ -26,7 +26,7 @@
                             <td class="align-middle text-danger">Absent</td>
                         {% endif %}
                         <td class="align-middle">
-                            <a class="btn btn-sm btn-warning" href="{% url 'info:change_attendance' obj.id %}">Change</a>
+                            <a class="btn btn-sm btn-warning" href="{% url 'info:hod_change_attendance' obj.id %}">Change</a>
                         </td>
                     </tr>
                     {% empty %}
