--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -81,20 +81,23 @@
         {% endif %}
       </ul>
 
+      <hr class="text-light">
       <ul class="navbar-nav mb-2 mb-sm-0">
-        <li class="nav-item">
-          <a class="nav-link text-capitalize">
-            {% if request.user.is_teacher %}
-              {{request.user.teacher.name}}
-            {% elif request.user.is_student %}
-              {{request.user.student.name}}
-            {% else %}
-              {{request.user.username}}
-            {% endif %}
-          </a>
-        </li>
-        <li class="nav-item">
-          {% if request.user.is_authenticated %}
+        <li class="nav-item dropdown">
+          {% if request.user.is_authenticated %}            
+            <button class="btn btn-outline-light dropdown-toggle text-capitalize" type="button" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
+              {% if request.user.is_teacher %}
+                {{request.user.teacher.name}}
+              {% elif request.user.is_student %}
+                {{request.user.student.name}}
+              {% else %}
+                {{request.user.username}}
+              {% endif %}
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'account_change_password' %}">Change Password</a></li>
+                <li><a class="dropdown-item" href="{% url 'account_email' %}">Change Email</a></li>
+            </ul>
             <a class="btn btn-danger m-1" href="{% url 'account_logout' %}">Logout</a>
           {% else %}
             <a class="btn btn-outline-light m-1" href="{% url 'account_login' %}">Login</a>
